--- a/phoenix-core/pom.xml
+++ b/phoenix-core/pom.xml
@@ -4,6 +4,7 @@
     <groupId>com.phoenix</groupId>
     <artifactId>phoenix-all</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../phoenix-all/pom.xml</relativePath>
   </parent>
   <artifactId>phoenix-core</artifactId>
 </project>
