Parsing command line arguments

--- a/phoenix-all/pom.xml
+++ b/phoenix-all/pom.xml
@@ -1,20 +1,27 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.phoenix</groupId>
-    <artifactId>phoenix-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>phoenix-all</artifactId>
-  <packaging>pom</packaging>
-  <dependencies>
-    <dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
         <groupId>com.phoenix</groupId>
-        <artifactId>phoenix-bom</artifactId>
-        <type>pom</type>
+        <artifactId>phoenix-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-  </dependencies>
+    </parent>
+    <artifactId>phoenix-all</artifactId>
+    <packaging>pom</packaging>
+    <dependencies>
+    </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.phoenix</groupId>
+                <artifactId>phoenix-bom</artifactId>
+                <type>pom</type>
+                <version>0.0.1-SNAPSHOT</version>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <build>
         <plugins>
             <plugin>
