--- a/phoenix-all/pom.xml
+++ b/phoenix-all/pom.xml
@@ -7,6 +7,9 @@
         <artifactId>phoenix-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <artifactId>phoenix-all</artifactId>
     <packaging>pom</packaging>
     <dependencies>
