--- a/phoenix-engine/pom.xml
+++ b/phoenix-engine/pom.xml
@@ -34,5 +34,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+        
+        <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.37</version>
+</dependency>
+        
     </dependencies>
 </project>
