Enhanced Testcases and started testcase for Runner

--- a/phoenix-bom/pom.xml
+++ b/phoenix-bom/pom.xml
@@ -38,6 +38,11 @@
                 <artifactId>slf4j-ext</artifactId>
                 <version>${slf4j.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.phoenix</groupId>
+                <artifactId>phoenix-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
