--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,15 @@
       <module>phoenix-all</module>
       <module>phoenix-core</module>
   </modules>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.3</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
