--- a/phoenix-engine/pom.xml
+++ b/phoenix-engine/pom.xml
@@ -46,5 +46,9 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-swing</artifactId>
+        </dependency>
     </dependencies>
 </project>
