Added encoding info + removed unneccessary check

--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,9 @@
   <artifactId>phoenix-parent</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <modules>
       <module>phoenix-bom</module>
       <module>phoenix-engine</module>
