--- a/phoenix-core/pom.xml
+++ b/phoenix-core/pom.xml
@@ -18,5 +18,9 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+		</dependency>
     </dependencies>
 </project>
