--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.phoenix</groupId>
@@ -13,6 +14,7 @@
       <module>phoenix-all</module>
       <module>phoenix-core</module>
       <module>phoenix-example</module>
+    <module>phoenix-server</module>
   </modules>
     <build>
         <pluginManagement>
