--- a/phoenix-engine-local/pom.xml
+++ b/phoenix-engine-local/pom.xml
@@ -18,5 +18,9 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
     </dependencies>
 </project>
