--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,6 @@ bin/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-mongo.log
+mongo.log*
 activemq-data/
+temp*
