--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,12 @@
   <modules>
       <module>phoenix-bom</module>
       <module>phoenix-engine</module>
+      <module>phoenix-engine-local</module>
+      <module>phoenix-engine-remote</module>
       <module>phoenix-all</module>
       <module>phoenix-core</module>
       <module>phoenix-example</module>
-    <module>phoenix-server</module>
+      <module>phoenix-server</module>
   </modules>
     <build>
         <pluginManagement>
