Fixed travis docker file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: java
+sudo: required
 jdk:
   - oraclejdk8
 env:
   - DISPLAY=:99.0
 before_install:
   - sh -e /etc/init.d/xvfb start
+services:
+  - docker
