--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ before_install:
   - sh -e /etc/init.d/xvfb start
 services:
   - docker
+install:
+  - mvn clean install -B -Dmaven.test.skip
+script:
+  - mvn test -B
