--- a/phoenix-all/pom.xml
+++ b/phoenix-all/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.phoenix</groupId>
         <artifactId>phoenix-parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
