--- a/phoenix-bom/pom.xml
+++ b/phoenix-bom/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.phoenix</groupId>
         <artifactId>phoenix-parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     <properties>
         <args4j.version>2.32</args4j.version>
