--- a/phoenix-bom/pom.xml
+++ b/phoenix-bom/pom.xml
@@ -12,6 +12,9 @@
         <lombok.version>1.16.6</lombok.version>
         <slf4j.version>1.7.13</slf4j.version>
         <assertj.version>3.0.2</assertj.version>
+        <camel.version>2.16.1</camel.version>
+        <powermock.version>1.6.4</powermock.version>
+        <activemq.version>5.12.1</activemq.version>
     </properties>
     <artifactId>phoenix-bom</artifactId>
     <packaging>pom</packaging>
@@ -23,6 +26,11 @@
                 <version>2.0.0.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
+                <artifactId>camel-jms</artifactId>
+                <version>${camel.version}</version>
             </dependency>
             <dependency>
                 <groupId>args4j</groupId>
@@ -54,6 +62,31 @@
                 <artifactId>assertj-swing</artifactId>
                 <version>${assertj.version}</version>
             </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-spring</artifactId>
+            <version>${camel.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-spring-javaconfig</artifactId>
+            <version>${camel.version}</version>
+        </dependency>
+            <dependency>
+                <groupId>org.powermock</groupId>
+                <artifactId>powermock-module-junit4</artifactId>
+                <version>${powermock.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.powermock</groupId>
+                <artifactId>powermock-api-mockito</artifactId>
+                <version>${powermock.version}</version>
+            </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <version>${activemq.version}</version>
+        </dependency> 
         </dependencies>
     </dependencyManagement>
 </project>
