--- a/phoenix-server/pom.xml
+++ b/phoenix-server/pom.xml
@@ -92,6 +92,10 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-spring-javaconfig</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-mongodb</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
