--- a/phoenix-engine-remote/docker/Dockerfile
+++ b/phoenix-engine-remote/docker/Dockerfile
@@ -1,4 +1,5 @@
 FROM java:8
+RUN apt-get update && apt-get install -y x11-xserver-utils
 VOLUME /tmp
 ADD phoenix-engine-remote-0.0.2-SNAPSHOT.jar app.jar
 RUN bash -c 'touch /app.jar'
