--- a/phoenix-engine-remote/pom.xml
+++ b/phoenix-engine-remote/pom.xml
@@ -38,6 +38,12 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-spring-javaconfig</artifactId>
         </dependency>
+        <dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-collections4</artifactId>
+    <version>4.1</version>
+</dependency>
+        
     </dependencies>
     <build>
         <plugins>
