--- a/phoenix-engine-remote/pom.xml
+++ b/phoenix-engine-remote/pom.xml
@@ -43,8 +43,23 @@
     <artifactId>commons-collections4</artifactId>
     <version>4.1</version>
 </dependency>
-        
-    </dependencies>
+<!--<dependency>
+  <groupId>org.apache.camel</groupId>
+  <artifactId>camel-xstream</artifactId>
+</dependency>-->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-rabbitmq</artifactId>
+        </dependency>
+        <dependency>
+    <groupId>org.apache.camel</groupId>
+    <artifactId>camel-amqp</artifactId>
+</dependency>
+<dependency>
+  <groupId>org.apache.camel</groupId>
+  <artifactId>camel-jackson</artifactId>
+</dependency>
+    </dependencies> 
     <build>
         <plugins>
             <plugin>
