--- a/phoenix-server/pom.xml
+++ b/phoenix-server/pom.xml
@@ -76,7 +76,7 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-jms</artifactId>
         </dependency>
-        <dependency>
+        <dependency> 
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-all</artifactId>
         </dependency> 
@@ -96,6 +96,23 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-mongodb</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-rabbitmq</artifactId>
+        </dependency>
+        <dependency>
+    <groupId>org.apache.camel</groupId>
+    <artifactId>camel-amqp</artifactId>
+</dependency>
+<dependency>
+  <groupId>org.apache.camel</groupId>
+  <artifactId>camel-jackson</artifactId>
+</dependency>
+
+<dependency>
+  <groupId>org.apache.camel</groupId>
+  <artifactId>camel-xstream</artifactId>
+</dependency>
     </dependencies>
     <build>
         <plugins>
