--- a/phoenix-client/package.json
+++ b/phoenix-client/package.json
@@ -42,6 +42,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "amqplib": "^0.4.1",
     "immutable": "^3.7.6",
     "jquery": "^2.2.0",
     "react": "^0.14.7",
