--- a/phoenix-client/package.json
+++ b/phoenix-client/package.json
@@ -46,6 +46,7 @@
     "amqplib": "^0.4.1",
     "immutable": "^3.7.6",
     "jquery": "^2.2.0",
+    "moment": "^2.11.2",
     "react": "^0.14.7",
     "react-addons-pure-render-mixin": "^0.14.7",
     "react-dom": "^0.14.7",
