--- a/phoenix-engine-local/pom.xml
+++ b/phoenix-engine-local/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.phoenix</groupId>
         <artifactId>phoenix-all</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.2</version>
         <relativePath>../phoenix-all/pom.xml</relativePath>
     </parent>
     <artifactId>phoenix-engine-local</artifactId>
