--- a/phoenix-example/pom.xml
+++ b/phoenix-example/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.phoenix</groupId>
         <artifactId>phoenix-parent</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.2</version>
     </parent>
     <artifactId>phoenix-example</artifactId>
     <build>
