--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+npm-debug.log
+logfile*
 *.class
 .project
 .settings/
@@ -5,7 +7,7 @@ target/
 bin/
 .classpath
 bin/
-
+cleanDocker.sh
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
