--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.phoenix</groupId>
-  <artifactId>phoenix-parent</artifactId>
-  <version>0.0.2</version>
-  <packaging>pom</packaging>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  <modules>
-      <module>phoenix-bom</module>
-      <module>phoenix-engine</module>
-      <module>phoenix-engine-local</module>
-      <module>phoenix-engine-remote</module>
-      <module>phoenix-all</module>
-      <module>phoenix-core</module>
-      <module>phoenix-example</module>
-      <module>phoenix-server</module>
-  </modules>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.phoenix</groupId>
+    <artifactId>phoenix-parent</artifactId>
+    <version>0.0.2</version>
+    <packaging>pom</packaging>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    <modules>
+        <module>phoenix-bom</module>
+        <module>phoenix-engine</module>
+        <module>phoenix-engine-local</module>
+        <module>phoenix-engine-remote</module>
+        <module>phoenix-all</module>
+        <module>phoenix-core</module>
+        <module>phoenix-example</module>
+        <module>phoenix-server</module>
+        <module>phoenix-client</module>
+    </modules>
 </project>
